[package]
name = "peach-network"
version = "0.1.0"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"

[dependencies]
env_logger = "0.6.1"
failure = "0.1.5"
get_if_addrs = "0.5.3"
jsonrpc-core = "11.0.0"
jsonrpc-http-server = "11.0.0"
jsonrpc-test = "11.0.0"
log = "0.4.0"
probes = "0.3.0"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.39"
snafu = "0.4"
regex = "1"
wpactrl = "0.3.1"
